<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright (c) 2014 Prabhakaran Srinivasan
 	
 	This program is free software; you can redistribute it and/or
 	modify it under the terms of the GNU General Public License
 	version 3 as published by the Free Software Foundation.
 	
 	This program is distributed in the hope that it will be useful,
 	but WITHOUT ANY WARRANTY; without even the implied warranty of
 	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 	GNU General Public License for more details.
 	
 	You should have received a copy of the GNU General Public License
 	along with this program; if not, write to the Free Software
 	Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
	MA  02110-1301, USA.
-->
<resources>
    <string name="app_name">flash.lite</string>
    <string name="about_app">\nThis program manipulates the camera LED on the Nexus phones.This app should theoretically work with devices on JellyBean and up.Currently tested to be working on the following devices:</string>
    <string name="about_dev_list">Nexus 5\nGalaxy Nexus\nSamsung Galaxy Grand\nSamsung Note\nsome Micromax device</string>
    <string name="about_dev">Let me know if the application works with devices other than the ones above.\ncontact_info:</string>
    <string name="about_dev_email">prabhakarans.dev@gmail.com\n</string>
    <string name="about_warn">Warning: Leaving the LED on for a long time might overheat it.Even the risk, that prolonged usage could damage the LED is explicitly stated hereby. Hence use at your own risk!\n</string>
    <string name="about_version">\nversion:1.0 beta release\n\n </string>
</resources>