<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright (c) 2014 Prabhakaran Srinivasan
 	
 	This program is free software; you can redistribute it and/or
 	modify it under the terms of the GNU General Public License
 	version 3 as published by the Free Software Foundation.
 	
 	This program is distributed in the hope that it will be useful,
 	but WITHOUT ANY WARRANTY; without even the implied warranty of
 	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 	GNU General Public License for more details.
 	
 	You should have received a copy of the GNU General Public License
 	along with this program; if not, write to the Free Software
 	Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
	MA  02110-1301, USA.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
                        
                        <TextView android:text="@string/about_app"
                                android:layout_width="fill_parent" 
                                android:layout_height="wrap_content"
                                android:paddingLeft="15dp"
                                android:textStyle="bold"
                                android:layout_gravity="center_vertical"
                                android:textColor="#3F9BBF" />
                        <TextView android:text="@string/about_dev_list"
                                android:layout_width="fill_parent" 
                                android:layout_height="wrap_content"
                                android:paddingLeft="15dp"
                                android:textStyle="bold"
                                android:layout_gravity="center_vertical"
                                android:textColor="#3F9BBF" />
                        <TextView android:text="@string/about_dev"
                                android:layout_width="fill_parent" 
                                android:layout_height="wrap_content"
                                android:paddingLeft="15dp"
                                android:textStyle="bold"              
                                android:layout_gravity="center_vertical"
                                android:textColor="#3F9BBF" />
                        <TextView android:text="@string/about_dev_email"
								android:id="@+id/dev_email"
                                android:layout_width="fill_parent" 
                                android:layout_height="wrap_content"
                                android:paddingLeft="15dp"
                                android:textStyle="bold"              
                                android:layout_gravity="center_vertical"
                                android:textColor="#bada55" />                                                                                  
                    	<TextView android:text="@string/about_warn"
                                android:layout_width="fill_parent" 
                                android:layout_height="wrap_content"
                                android:paddingLeft="15dp"              
                                android:layout_gravity="center_vertical"
                                android:textStyle="bold"
                                android:textColor="#ffff8080" />
                    	<TextView android:text="@string/about_version"
                                android:layout_width="fill_parent" 
                                android:layout_height="wrap_content"
                                android:paddingLeft="15dp"
                                android:layout_gravity="center_vertical"
                                android:textColor="#3F9BBF" />
                        </LinearLayout>
